--- a/index.css
+++ b/index.css
@@ -72,3 +72,46 @@ body{
     font-size: 90px;
     color: white;
 }
+
+#spinner{
+    background: rgb(29, 29, 29);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1;    
+    opacity: 0.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#spinner .animacionSpinner
+{
+    width: 200px;
+    height: 200px; 
+    border-radius: 50% 50%;
+    border: 8px;
+    border-color: #f89344; 
+    border-style: dotted;
+    position: relative;
+    opacity: 1;
+    z-index: 4; 
+    animation: animacion;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
+    animation-delay: unset;
+    
+}
+
+@keyframes animacion {
+    0%{
+        transform: rotateX(180deg)  rotateY(180deg) scale(1);
+    }
+
+    100%{
+        transform: rotateX(-180deg)  rotateY(-180deg) scale(0.5);
+    }
+    
+    
+}
+
